# tc_rebuy

./: main.py  pyproject.toml  record.md  train_val_loss.csv
src/: data.py  dataset.py  feature_engineering.py  gru.py  main.py  notebook.ipynb  pipe.py  rebuy_model.py  run.py  uni.py
src/feature/: behavior_transformer.py  cache_feature_transformer.py  matrix_transformer.py  prev_transformer.py  tfidf_transformer.py  unifired_transformer.py
src/output/: tfidf_feature.pkl
